# bitmorph

./: .gitignore  Cargo.toml  README.md  dfx.json  justfile  package-lock.json  package.json
crates/bitmorph-frontend/: Cargo.toml
crates/bitmorph_frontend/: Cargo.toml
crates/bitmorph_frontend/src/: main.rs
src/bitmorph-frontend/: Dioxus.toml
src/bitmorph_backend/: Cargo.toml
src/bitmorph_frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json
src/bitmorph_frontend/src/: main.rs
src/bitmorph_frontend/src/lib/: canisters.js
